add_executable(pingpongserver pingpongserver.cc)
if(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(pingpongserver pthread tyrantnet)
else(WIN32)
    target_link_libraries(pingpongserver ws2_32 tyrantnet)
endif(UNIX)

add_executable(pingpongclient pingpongclient.cc)
if(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(pingpongclient pthread tyrantnet)
else()
    target_link_libraries(pingpongclient ws2_32 tyrantnet)
endif()
