add_executable(pingpongserver pingpongserver.cc)
if(WIN32)
    target_link_libraries(pingpongserver ws2_32 tyrantnet)
    
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(pingpongserver pthread tyrantnet)
endif(WIN32)

add_executable(pingpongclient pingpongclient.cc)
if(WIN32)
    target_link_libraries(pingpongclient ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(pingpongclient pthread tyrantnet)
endif(WIN32)

add_executable(broadcastserver broadcastserver.cc)
if(WIN32)
    target_link_libraries(broadcastserver ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(broadcastserver pthread tyrantnet)
endif(WIN32)

add_executable(broadcastclient broadcastclient.cc)
if(WIN32)
    target_link_libraries(broadcastclient ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(broadcastclient pthread tyrantnet)
endif(WIN32)

add_executable(httpdownload httpdownload.cc)
if(WIN32)
    target_link_libraries(httpdownload ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(httpdownload pthread tyrantnet)
endif(WIN32)
