add_executable(pingpongserver pingpongserver.cc)
if(WIN32)
    target_link_libraries(pingpongserver ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(pingpongserver pthread tyrantnet)
endif()

add_executable(pingpongclient pingpongclient.cc)
if(WIN32)
    target_link_libraries(pingpongclient ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(pingpongclient pthread tyrantnet)
endif()

add_executable(broadcastserver broadcastserver.cc)
if(WIN32)
    target_link_libraries(broadcastserver ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(broadcastserver pthread tyrantnet)
endif()

add_executable(broadcastclient broadcastclient.cc)
if(WIN32)
    target_link_libraries(broadcastclient ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(broadcastclient pthread tyrantnet)
endif()

add_executable(httpdownload_test httpdownload_test.cc)
if(WIN32)
    target_link_libraries(httpdownload_test ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(httpdownload_test pthread tyrantnet)
endif()

add_executable(promisereceive_test promisereceive_test.cc)
if(WIN32)
    target_link_libraries(promisereceive_test ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(promisereceive_test pthread tyrantnet)
endif()

add_executable(websocket_test websocket_test.cc)
if(WIN32)
    target_link_libraries(websocket_test ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(websocket_test pthread tyrantnet)
endif()