add_executable(PingPongServer PingPongServer.cc)
if(WIN32)
    target_link_libraries(PingPongServer ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(PingPongServer pthread tyrantnet)
endif()

add_executable(PingPongClient PingPongClient.cc)
if(WIN32)
    target_link_libraries(PingPongClient ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(PingPongClient pthread tyrantnet)
endif()

add_executable(BroadCastServer BroadCastServer.cc)
if(WIN32)
    target_link_libraries(BroadCastServer ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(BroadCastServer pthread tyrantnet)
endif()

add_executable(BroadCastClient BroadCastClient.cc)
if(WIN32)
    target_link_libraries(BroadCastClient ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(BroadCastClient pthread tyrantnet)
endif()

add_executable(TestHttp TestHttp.cc)
if(WIN32)
    target_link_libraries(TestHttp ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(TestHttp pthread tyrantnet)
endif()

add_executable(TestPromiseReceive TestPromiseReceive.cc)
if(WIN32)
    target_link_libraries(TestPromiseReceive ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(TestPromiseReceive pthread tyrantnet)
endif()

add_executable(BenchWebsocket BenchWebsocket.cc)
if(WIN32)
    target_link_libraries(BenchWebsocket ws2_32 tyrantnet)
elseif(UNIX)
    find_package(Threads REQUIRED)
    target_link_libraries(BenchWebsocket pthread tyrantnet)
endif()
